# corner_detector

./: CMakeLists.txt  README.md  package.xml  package.xml~
src/: detector.cpp  detector.cpp.autosave  detector.h  imageContainer.cpp  imageContainer.h  main.cpp
